WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310647
Fix some JSC API implementation functions to avoid unnecessarily copying CallFrame arguments.
https://bugs.webkit.org/show_bug.cgi?id=310647
Summary
Fix some JSC API implementation functions to avoid unnecessarily copying Call...
Mark Lam
Reported
2026-03-24 11:48:36 PDT
This is a minor optimization on 64-bit platforms where JSValueRef is basically a JSValue.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-24 11:49:12 PDT
<
rdar://problem/173257607
>
Mark Lam
Comment 2
2026-03-24 12:06:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61260
EWS
Comment 3
2026-03-24 19:51:17 PDT
Committed
309885@main
(3b5ee5168e4f): <
https://commits.webkit.org/309885@main
> Reviewed commits have been landed. Closing PR #61260 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug