Source/JavaScriptCore/API/APICallbackFunction.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2013-2020 Apple Inc. All rights reserved.
+ * Copyright (C) 2013-2020, 2026 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -28,6 +28,7 @@
 
 #include "APICast.h"
 #include "Error.h"
+#include "Integrity.h"
 #include "JSCallbackConstructor.h"
 #include "JSLock.h"
 #include <wtf/Vector.h>
@@ -48,16 +49,24 @@ EncodedJSValue APICallbackFunction::callImpl(JSGlobalObject* globalObject, CallF
     JSObjectRef functionRef = toRef(callFrame->jsCallee());
     JSObjectRef thisObjRef = toRef(jsCast<JSObject*>(callFrame->thisValue().toThis(globalObject, ECMAMode::sloppy())));
 
-    int argumentCount = static_cast<int>(callFrame->argumentCount());
-    Vector<JSValueRef, 16> arguments(argumentCount, [&](size_t i) {
+#if CPU(ADDRESS64)
+    auto argumentsSpan = Integrity::audit(callFrame->argumentsSpan());
+    JSValueRef* argumentsSpanData = std::bit_cast<JSValueRef*>(argumentsSpan.data());
+#else
+    // It is safe to use a Vector here because the values are protected by their source
+    // location in the call frame arguments on the stack.
+    Vector<JSValueRef, 16> arguments(callFrame->argumentCount(), [&](size_t i) {
         return toRef(globalObject, callFrame->uncheckedArgument(i));
     });
+    auto argumentsSpan = arguments.span();
+    auto* argumentsSpanData = argumentsSpan.data();
+#endif
 
     JSValueRef exception = nullptr;
     JSValueRef result;
     {
         JSLock::DropAllLocks dropAllLocks(globalObject);
-        result = jsCast<T*>(toJS(functionRef))->functionCallback()(execRef, functionRef, thisObjRef, argumentCount, arguments.span().data(), &exception);
+        result = jsCast<T*>(toJS(functionRef))->functionCallback()(execRef, functionRef, thisObjRef, argumentsSpan.size(), argumentsSpanData, &exception);
     }
     if (exception) {
         throwException(globalObject, scope, toJS(globalObject, exception));
@@ -91,16 +100,24 @@ EncodedJSValue APICallbackFunction::constructImpl(JSGlobalObject* globalObject, 
             RETURN_IF_EXCEPTION(scope, { });
         }
 
-        size_t argumentCount = callFrame->argumentCount();
-        Vector<JSValueRef, 16> arguments(argumentCount, [&](size_t i) {
+#if CPU(ADDRESS64)
+        auto argumentsSpan = Integrity::audit(callFrame->argumentsSpan());
+        JSValueRef* argumentsSpanData = std::bit_cast<JSValueRef*>(argumentsSpan.data());
+#else
+        // It is safe to use a Vector here because the values are protected by their source
+        // location in the call frame arguments on the stack.
+        Vector<JSValueRef, 16> arguments(callFrame->argumentCount(), [&](size_t i) {
             return toRef(globalObject, callFrame->uncheckedArgument(i));
         });
+        auto argumentsSpan = arguments.span();
+        auto* argumentsSpanData = argumentsSpan.data();
+#endif
 
         JSValueRef exception = nullptr;
         JSObjectRef result;
         {
             JSLock::DropAllLocks dropAllLocks(globalObject);
-            result = callback(ctx, constructorRef, argumentCount, arguments.span().data(), &exception);
+            result = callback(ctx, constructorRef, argumentsSpan.size(), argumentsSpanData, &exception);
         }
 
         if (exception) {
